--- a/index.html
+++ b/index.html
@@ -33,17 +33,28 @@
         </nav>
 
         <div class="container">
-            <img width="300px" height="100px" src="assets/amul-logo-white.png" alt=""> 
-            <h1>BE <br>MORE <br> MILK.</h1>
-            <p>most hygenic liquid milk available in the market.</p>
+        
+            <img src="assets/amul-logo-white.png" alt="">
+            <h2>The Taste Of India</h2>
+                    
+            <div class="wave">
+                <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                </defs>
+                <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+                </g>
+                </svg>
+            </div>
         </div>
-
-        <div class="gif">
-            <img src="assets/amul-ice.gif" alt="">
-        </div>
-        <div class="gif2">
-            <img src="assets/1.gif" alt="">
-        </div>
+        <div class="content flex">
+            <p style="color: white;">Amul | The Taste Of India </p>
+          </div>
     </div>
 
     <section class="products">
